# com.helix_editor.Helix

./: .gitignore  HELIX_FIRST_RUN.md  Helix.appdata.xml  README.md  appdata_file.patch  cargo-sources.json  com.helix_editor.Helix.yml  grammar-sources.json  helix_first_run.txt  parse_langueges.py  tree-sitter-go-template.patch
grammars/: grammar-sources.json  grammars.yml  meson.build  parse_languages.py
